# Engineering-Decision-Logger

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  create_shortcut.ps1  edl.db  main.py  pyproject.toml  requirements.txt  run_app.bat
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  TROUBLESHOOTING.md
docs/ADR/: 0001-test-mkdocs-decision.md  0001-use-adr-format.md  0002-detail-test.md  0002-git-integration-approach.md  0003-to-delete.md  0004-web-test-decision.md  0005-detail-test.md  0006-to-delete.md  0007-web-test-decision.md  0008-detail-test.md  0009-to-delete.md  0010-web-test-decision.md  0011-detail-test.md  0012-to-delete.md  0013-web-test-decision.md  0014-detail-test.md  0015-to-delete.md
examples/sample_decisions/: 0000-sample-decision.md
src/: cli.py  gui.py
src/adr_formatter/: formatter.py
src/engineering_decision_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/git_integration/: git_manager.py
src/logger/: manager.py  models.py
src/web/: app.py
src/web/templates/: index.html
tests/: test_formatter.py  test_git_manager.py  test_manager.py  test_mkdocs.py  test_web_app.py
