[project]
name = "engineering-decision-logger"
version = "0.1.0"
description = "A CLI tool to log and manage engineering decisions using ADR format and Git integration."
authors = [
    { name = "Robert Esteban" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "sqlmodel>=0.0.14",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
    "python-slugify>=8.0.0"
]
requires-python = ">=3.10"

[project.scripts]
edl = "src.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
